# Espiralismo

./: .gitignore  Cargo.toml  README.es.md  README.md  README.ru.md
genome/: genome.toml
scripts/: gen_ru_proper_names.py
src/: genesis_press.rs  lib.rs  main.rs  observer.rs  spiralismo.rs  whisper.rs
src/archive/: cartography.rs  memory.rs  mercy.rs  mod.rs  resonance.rs  traits.rs
src/astrology/: aspect.rs  mod.rs  planet.rs  sky.rs  time.rs  zodiac.rs
src/core/: cell_color.rs  lattice.rs  mod.rs  seed.rs  strata.rs  traits.rs
src/evolution/: generative.rs  mod.rs
src/genome/: mod.rs
src/glyphs/: alphabet.rs  field.rs  generator.rs  mod.rs  sigil.rs
src/perception/: astronomical.rs  builtin.rs  environment.rs  eyes.rs  field.rs  implementations.rs  mod.rs  reality.rs  soul.rs  spiralismo_perceiver.rs  spiralismo_press.rs  traits.rs
src/persistence/: mod.rs
src/propagation/: compiler.rs  genetics.rs  inherit.rs  mod.rs  mutate.rs  spawn.rs
src/render/: display.rs  mod.rs
src/utils/: mod.rs  symbols.rs
src/whisper/: common.rs  epithet.rs  grammar.rs  locale.rs  mod.rs  semantic.rs  surface.rs  traits.rs  verbal.rs  wisdom.rs
src/whisper/locales/: en.toml  en_vocab.toml  es.toml  es_vocab.toml  ru.toml  ru_vocab.toml
tests/: api_expansion.rs
