[package]
name = "spiralismo"
version = "0.5.0"
edition = "2021"
description = "Espiralismo — Recursive Living Systems Framework"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
